@@ -1,5 +1,6 @@
 package com.cmsr.onebase.module.app.core.provider.auth;
 
+import com.cmsr.onebase.framework.tenant.core.util.TenantUtils;
 import com.cmsr.onebase.module.app.core.dal.database.AppSqlQueryRepository;
 import com.cmsr.onebase.module.app.core.dal.database.auth.AppAuthRoleDeptRepository;
 import com.cmsr.onebase.module.app.core.dal.database.auth.AppAuthRoleRepository;
@@ -7,6 +8,8 @@ import com.cmsr.onebase.module.app.core.dal.dataobject.AppAuthRoleDO;
 import com.cmsr.onebase.module.app.core.dal.dataobject.AppAuthRoleDeptDO;
 import com.cmsr.onebase.module.app.core.dto.auth.UserRoleDTO;
 import com.cmsr.onebase.module.app.core.enums.auth.AuthRoleTypeEnum;
+import com.cmsr.onebase.module.system.api.dept.DeptApi;
+import com.cmsr.onebase.module.system.api.dept.dto.DeptRespDTO;
 import com.mybatisflex.core.tenant.TenantManager;
 import lombok.Setter;
 import lombok.extern.slf4j.Slf4j;
@@ -35,6 +38,9 @@ public class AppAuthRoleProvider {
     @Autowired
     private AppAuthRoleDeptRepository appAuthRoleDeptRepository;
 
+    @Autowired
+    private DeptApi deptApi;
+
     public UserRoleDTO findUserRoleByApplication(Long userId, Long applicationId) {
         List<AppAuthRoleDO> authRoleDOS = new ArrayList<>();
 
@@ -50,23 +56,27 @@ public class AppAuthRoleProvider {
 
         UserRoleDTO userRoleDTO = new UserRoleDTO();
         userRoleDTO.setAdminRole(false);
-        userRoleDTO.setRoleIds(Set.of());
+        userRoleDTO.setRoleIds(Collections.emptySet());
+        userRoleDTO.setRoleUuids(Collections.emptySet());
         for (AppAuthRoleDO authRoleDO : authRoleDOS) {
             if (AuthRoleTypeEnum.isSystemAdminRole(authRoleDO.getRoleType())) {
                 userRoleDTO.setAdminRole(true);
             }
         }
         Set<Long> ids = authRoleDOS.stream().map(AppAuthRoleDO::getId).collect(Collectors.toSet());
+        Set<String> uuids = authRoleDOS.stream().map(AppAuthRoleDO::getRoleUuid).collect(Collectors.toSet());
         userRoleDTO.setRoleIds(ids);
+        userRoleDTO.setRoleUuids(uuids);
         return userRoleDTO;
     }
 
     private List<AppAuthRoleDO> findRolesByDept(Long userId, Long applicationId) {
         // 获取用户的部门层次（包含用户所在部门及其所有上级部门）
-        List<Long> deptTree = TenantManager.withoutTenantCondition(() -> appSqlQueryRepository.findDeptHierarchyByUserId(userId));
-        if (deptTree == null || deptTree.isEmpty()) {
+        List<DeptRespDTO> deptRespDTOS = TenantUtils.executeIgnore(() -> deptApi.getParentDeptsListByUserId(userId).getCheckedData());
+        if (deptRespDTOS == null || deptRespDTOS.isEmpty()) {
             return Collections.emptyList();
         }
+        List<Long> deptTree = deptRespDTOS.stream().map(dto -> dto.getId()).toList();
         // 获取该应用下的部门角色关系
         List<AppAuthRoleDeptDO> authRoleDeptDOS = TenantManager.withoutTenantCondition(() -> appAuthRoleDeptRepository.findByApplicationId(applicationId));
         if (authRoleDeptDOS == null || authRoleDeptDOS.isEmpty()) {
